unpackaged/objects/Data_Set__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Document__c</fullName>
        <label>Legal Document</label>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Data Sets</relationshipLabel>
        <relationshipName>Data_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Set_Name__c</fullName>
        <label>Set Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Data Set</label>
    <nameField>
        <displayFormat>SET-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>